      (Closes: #485705)
    + [NT] Removed uploader-address-missing tag.
    + [NT] Added section-mapping for (some) zope packages.  This
      fixes some false-positives where python-zope packages were
      wrongly identified as belong to the python section.
    + [NT] Fixed an issue where "doc-pkg-depends-on-main-pkg" would
      only be triggered if it was a "pre-depends" relation.
  * checks/files:
    + [JW,NT] Skip "Multi-Arch: same" check of gzip files if their
      install path contains the architecture.  (Closes: #650665)
    + [JW]  Fixed a false-negative "empty-binary-package" if the
      package contained the /u/s/doc/$pkg symlink.
      (Closes: #650959)
    + [NT] Allow fonts in packages starting with "fonts-".  This
      completes the fix for #646838.  Thanks to أحمد المحمودي
      for the follow up report.  (Closes: #651045)
  * checks/group-check{,.desc}:
    + [NT] Check for file conflicts in binaries built from the same
      source package.  (Closes: #293838)
    + [JW] Added check for incomplete Multi-arch'ification.
      (Closes: #650838)
  * checks/nmu:
    + [JW] Properly handle uploader names with commas.
  * checks/shared-libs{,.desc}:
    + [JW] Check for Multi-Arch foreign packages shipping shared
      libraries in public library directories.  (Closes: #650444)
  * checks/source-copyright:
    + [JW] Allow a trailing slash in the DEP-5 1.0 URL.
      (Closes: #649813)
  * checks/scripts:
    + [NT] Accepted patch from Evan Broder to check for missing
      versioned pre-depends on dpkg when using maintscript helper.
      This dependency is trivially satisfied in Debian, but may
      complicate Ubuntu LTS upgrades.  (Closes: #602249)
    + [NT] Accepted patch from James McCoy to recognize "racket" as
      a known interpreter.  (Closes: #652594)
    + [NT] Accepted patch from Martin Erik Werner to recognize
      "fontforge" as a known interpreter.  (Closes: #652736)
  * checks/symlinks: